# You must change these to your own details.
[package]
name = "rust-tfatf"
description = "Package for rust parts of TFATF"
version = "0.1.0"
authors = ["Scott Riley <scott.riley111@gmail.com>", "Harrison Booth <harrisonboothh@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
serde = "^1.0.59"
serde_derive = "^1.0.59"

# TODO: The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so ideally we'd only use
# it in debug mode, however [target."cfg(debug_assertions)".dependencies] does not
# work - so in the meantime, we're always including it
# see issues for more/possible solutions in future:
#   - https://github.com/rust-lang/cargo/issues/5777
#   - https://github.com/rust-lang/cargo/issues/7634
console_error_panic_hook = "0.1.5"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

[dependencies.wasm-bindgen]
version = "0.2.45"
features = ["serde-serialize"]

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
