[package]
name = "pathfinding-core"
version = "0.1.0"
description = "Package for core implementation of A* parts"
authors = ["Scott Riley <scott.riley111@gmail.com>", "Harrison Booth <harrisonboothh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
serde = "^1.0.59"
serde_derive = "^1.0.59"

[dependencies.wasm-bindgen]
version = "0.2.45"
features = ["serde-serialize"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "pathfinding_benchmark"
harness = false
